# helium

./: .gitignore  Cargo.toml  README.md
python/: README.md  analysis_log.py  cobs.py  download_map.py  draw.py  overlay.py  read_bin.py  read_txt.py  sensor.py
python/fit/: decode.py
python/fit/output/: 24-7th3milddle.fit.csv  24-7th4middle.fit.csv  24-7th5middle.fit.csv  24-7th6full.fit.csv  24-7th7full.fit.csv  24-7th8full.fit.csv  24-7th9full.fit.csv
src/: main.rs
src/parse/: alt_data.rs  barometer.rs  cobs.rs  gps.rs  imu.rs  imu_data.rs  mod.rs  parser.rs  pitot.rs  servo.rs  servo_data.rs  tachometer.rs  ultra_sonic.rs  vane.rs
src/ui/: alt_data.rs  altitude.rs  flight_menu.rs  gps.rs  imu.rs  imu_data.rs  mod.rs  pitot.rs  pitot_data.rs  power_est.rs  servo.rs  servo_data.rs  tachometer.rs  vane.rs
src/ui/app/: flight_menu.rs  gps.rs  imu.rs  mod.rs
src/ui/sensor/: alt_data.rs  barometer.rs  imu_data.rs  mod.rs  pitot_data.rs  servo_data.rs  tachometer.rs  vane.rs
