[package]
name = "helium"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
env_logger = "0.11.3"

serialport = "4.3.0"
byteorder = "1.4.3"

log = "0.4.14"
egui_plot = "0.27.2"
image = "0.25.1"
chrono = "0.4.38"


nalgebra = "0.32.6"

dirs = "5.0.1"
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
